--- a/contacto.html
+++ b/contacto.html
@@ -75,7 +75,7 @@
     <br />
     <br />
     <div
-      class="uk-container uk-flex-auto top-container uk-position-relative uk-margin-large-top uk-light"
+      class="uk-container uk-flex-auto top-container uk-position-relative uk-margin-xlarge-top uk-light"
       data-uk-parallax="y: 0,50; easing:0; opacity:0.2"
     >
       <div
