--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
     <!-- /TOP -->
     <section id="content" class="uk-section uk-section-default">
       <div class="uk-container">
-        <h3 class="uk-text-center">HERRAJES</h3>
+        <div
+          data-uk-scrollspy="cls: uk-animation-slide-right-medium;target: > *; delay: 150"
+        >
+          <h1 class="uk-text-center">HERRAJES</h1>
+        </div>
         <div class="uk-section uk-section-small uk-padding-remove-top">
           <ul
             class="uk-subnav uk-subnav-pill uk-flex uk-flex-center"
@@ -178,25 +182,36 @@
                 />
               </div>
               <div data-uk-scrollspy-class="uk-animation-slide-right-medium">
-                <h6 class="uk-text-primary">CALIDAD</h6>
-                <h2 class="uk-margin-small-top">
+                <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                  CALIDAD
+                </h6>
+                <h2 class="uk-margin-small-top uk-text-center uk-text-left@m">
                   La más amplia linea de herrajes de acero inoxidable para todas
                   las necesidades.
                 </h2>
-                <p class="subtitle-text">
+                <p
+                  class="subtitle-text uk-text-center uk-text-left@m"
+                  style="color: black"
+                >
                   Con un desempeño excelente asegurado, podrás elegir entre una
                   gran variedad de herrajes y terminaciones.
                 </p>
                 <div class="uk-grid uk-child-width-1-2@s" data-uk-grid>
                   <div>
-                    <h4>Eficacia</h4>
-                    <p>Cumplen su función. Seguridad garantizada al 100%.</p>
+                    <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                      EFICACIA
+                    </h6>
+                    <p class="uk-text-center uk-text-left@m">
+                      Cumplen su función, garantizando al 100% la seguridad.
+                    </p>
                   </div>
                   <div>
-                    <h4>Estilo</h4>
-                    <p>
+                    <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                      ESTILO
+                    </h6>
+                    <p class="uk-text-center uk-text-left@m">
                       No te conformes con la funcionalidad, elegí el estilo de
-                      herraje que más se adapte a tu estilo.
+                      herraje que más se adapte a tus espacios.
                     </p>
                   </div>
                 </div>
@@ -218,25 +233,35 @@
                 />
               </div>
               <div data-uk-scrollspy-class="uk-animation-slide-right-medium">
-                <h6 class="uk-text-primary">VARIEDAD</h6>
-                <h2 class="uk-margin-small-top">
-                  La más amplia linea de herrajes de acero inoxidable para todas
-                  las necesidades.
+                <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                  VARIEDAD
+                </h6>
+                <h2 class="uk-margin-small-top uk-text-center uk-text-left@m">
+                  Brillante, satinado, cuál es tu estilo?
                 </h2>
-                <p class="subtitle-text">
+                <p
+                  class="subtitle-text uk-text-center uk-text-left@m"
+                  style="color: black"
+                >
                   Con un desempeño excelente asegurado, podrás elegir entre una
                   gran variedad de herrajes y terminaciones.
                 </p>
                 <div class="uk-grid uk-child-width-1-2@s" data-uk-grid>
                   <div>
-                    <h4>Eficacia</h4>
-                    <p>Cumplen su función. Seguridad garantizada al 100%.</p>
+                    <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                      EFICACIA
+                    </h6>
+                    <p class="uk-text-center uk-text-left@m">
+                      Cumplen su función. Seguridad garantizada al 100%.
+                    </p>
                   </div>
                   <div>
-                    <h4>Estilo</h4>
-                    <p>
+                    <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                      ESTILO
+                    </h6>
+                    <p class="uk-text-center uk-text-left@m">
                       No te conformes con la funcionalidad, elegí el estilo de
-                      herraje que más se adapte a tu estilo.
+                      herraje que más se adapte a tus espacios.
                     </p>
                   </div>
                 </div>
@@ -258,25 +283,38 @@
                 />
               </div>
               <div data-uk-scrollspy-class="uk-animation-slide-right-medium">
-                <h6 class="uk-text-primary">SATISFACCION</h6>
+                <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                  SATISFACCION
+                </h6>
                 <h2 class="uk-margin-small-top">
-                  La más amplia linea de herrajes de acero inoxidable para todas
-                  las necesidades.
+                  Tendrás la mejor experiencia posible al utilizar nuestros
+                  productos.
                 </h2>
-                <p class="subtitle-text">
-                  Con un desempeño excelente asegurado, podrás elegir entre una
-                  gran variedad de herrajes y terminaciones.
+                <p
+                  class="subtitle-text uk-text-center uk-text-left@m"
+                  style="color: black"
+                >
+                  Durabilidad, calidad, robustez, seguridad. Todo lo necesario
+                  al hablar de una baranda de escalera, cerco de pileta, o
+                  mampara para baño.
                 </p>
                 <div class="uk-grid uk-child-width-1-2@s" data-uk-grid>
                   <div>
-                    <h4>Eficacia</h4>
-                    <p>Cumplen su función. Seguridad garantizada al 100%.</p>
+                    <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                      SEGURIDAD
+                    </h6>
+                    <p>
+                      Vidrios laminados y templados, en todas sus combinaciones.
+                      Seguridad garantizada.
+                    </p>
                   </div>
                   <div>
-                    <h4>Estilo</h4>
-                    <p>
-                      No te conformes con la funcionalidad, elegí el estilo de
-                      herraje que más se adapte a tu estilo.
+                    <h6 class="uk-text-primary uk-text-center uk-text-left@m">
+                      ROBUSTEZ
+                    </h6>
+                    <p class="uk-text-center uk-text-left@m">
+                      Al pasar el tiempo, notarás que nuestros productos se
+                      desempeñan como el primer día.
                     </p>
                   </div>
                 </div>
@@ -289,22 +327,35 @@
     <section class="uk-section uk-section-secondary uk-section-large">
       <div class="uk-container">
         <div class="uk-grid uk-child-width-1-2@l uk-flex-middle">
-          <div>
-            <h6>TRABAJOS A MEDIDA</h6>
-            <h2 class="uk-margin-small-top uk-h1">Atención personalizada</h2>
-            <p class="subtitle-text uk-text-justify@s">
+          <div
+            data-uk-scrollspy="cls: uk-animation-slide-bottom-small; target: > *; delay: 150"
+          >
+            <h6
+              class="uk-text-primary uk-text-center uk-text-left@l"
+              uk-scrollspy="cls:uk-animation-slide-bottom-small"
+            >
+              TRABAJOS A MEDIDA
+            </h6>
+            <h2
+              class="uk-margin-small-top uk-h1 uk-text-center uk-text-left@l"
+              uk-scrollspy="cls:uk-animation-slide-bottom-small"
+            >
+              Atención personalizada
+            </h2>
+            <p class="subtitle-text uk-text-center uk-text-left@l">
               Dedicamos el tiempo necesario para desarrollar tu proyecto y
               aseguramos tu satisfacción con el trabajo terminado.
             </p>
             <a
               href="https://wa.me/5493585064360?text=Hola!%20Quiero%20hacer%20una%20consulta!"
               target="_blank"
-              class="uk-button uk-button-primary uk-border-pill"
+              class="uk-button uk-button-primary uk-border-pill uk-align-center uk-align-left@l"
               style="
                 border: 2px solid #71c8f0;
                 background-color: #222;
                 color: #fff;
                 border-radius: 100px;
+                max-width: 180px;
               "
               ><span
                 class="uk-margin-small-right uk-icon"
@@ -319,6 +370,7 @@
               data-src="./img/glas/atencion_personalizada.png"
               data-uk-img
               alt="Image"
+              class="uk-align-center uk-align-right@l"
             />
           </div>
         </div>
@@ -326,13 +378,9 @@
     </section>
     <section class="uk-cover-container overlay-wrap">
       <img
-        src="./img/glas/fondo1.jpg"
-        data-srcset="./img/glas/fondo4.jpg 640w,
-			./img/glas/fondo3.jpg 960w,
-			./img/glas/fondo2.jpg 1200w,
-			./img/glas/fondo1.jpg 2000w"
+        src="./img/cerco12.jpg"
         data-sizes="100vw"
-        data-src="./img/glas/fondo1.jpg"
+        data-src="./img/cerco12.jpg"
         alt=""
         data-uk-cover
         data-uk-img
@@ -345,7 +393,7 @@
             class="uk-width-2-5@m"
             data-uk-parallax="y: 50,-50; easing: 0; media:@l"
           >
-            <h6>TE OFRECEMOS</h6>
+            <h6 class="uk-text-center uk-text-left@m">TE OFRECEMOS</h6>
             <div
               class="uk-position-relative uk-visible-toggle uk-light"
               data-uk-slider="easing: cubic-bezier(.16,.75,.47,1)"
@@ -353,10 +401,10 @@
               <ul class="uk-slider-items uk-child-width-1-1">
                 <li>
                   <div data-uk-slider-parallax="opacity: 0.2,1,0.2">
-                    <h2 class="uk-margin-small-top">
+                    <h2 class="uk-margin-small-top uk-text-center uk-text-left@m">
                       Asesoramiento profesional
                     </h2>
-                    <p>
+                    <p class="uk-text-center uk-text-left@m">
                       Ponemos a tu disposición el conocimiento recogido en años
                       de experiencia
                     </p>
@@ -364,27 +412,32 @@
                 </li>
                 <li>
                   <div data-uk-slider-parallax="opacity: 0.2,1,0.2">
-                    <h2 class="uk-margin-small-top">Presupuesto sin cargo</h2>
-                    <p>
+                    <h2 class="uk-margin-small-top uk-text-center uk-text-left@m"">Presupuesto sin cargo</h2>
+                    <p class="uk-text-center uk-text-left@m">
                       Cotizamos las distintas opciones viables para tu proyecto
                     </p>
                   </div>
                 </li>
                 <li>
                   <div data-uk-slider-parallax="opacity: 0.2,1,0.2">
-                    <h2 class="uk-margin-small-top">
+                    <h2 class="uk-margin-small-top uk-text-center uk-text-left@m">
                       Colocación por personal calificado
                     </h2>
-                    <p>
+                    <p class="uk-text-center uk-text-left@m">
                       Aseguramos un trabajo de excelente calidad, con perfectas
                       terminaciones, para asegurar tu satisfacción.
                     </p>
                   </div>
                 </li>
               </ul>
-              <ul class="uk-slider-nav uk-dotnav uk-margin-top">
+
+<!-- TODO : ALINEAR NAVEGACION AL CENTRO EN MOVIL - A LA IZQ A PARTIR DE TABLET -->
+
+              <div class="">
+              <ul class=" ul-align-center uk-align-left@m uk-slider-nav uk-dotnav uk-margin-top">
                 <li></li>
               </ul>
+              </div>
             </div>
           </div>
         </div>
